--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </head>
 <body>
     <canvas id="game-canvas"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.2.4/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script type="module" src="src/main.js"></script>
 </body>
 </html></content>
