feat: Implement core game structure and interaction mechanics
- Add InputManager for handling user input events.
- Create TouchFeedback class for visual feedback on interactions.
- Establish main entry point with Game initialization.
- Develop FloorDecorator and WallDecorator for room styling.
- Introduce Furniture class for interactive furniture items.
- Build RoomManager to manage room state and furniture placement.
- Implement SaveManager and StorageAdapter for game state persistence.
- Create various scene classes (HomeScene, ParkScene, etc.) for different environments.
- Develop UI components including BottomNav, Button, and Panel for user interaction.
- Add utility functions for easing and mathematical operations.
- Implement AmbientFX and Parallax for enhanced visual effects in scenes.
- Establish WorldManager for managing background and scene palettes.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background: #f0f8ff;
-            font-family: 'Arial', sans-serif;
+            background: #f6f2ea;
+            font-family: 'Trebuchet MS', sans-serif;
         }
-        #game-canvas {
-            display: block;
+        #app {
             width: 100vw;
             height: 100vh;
         }
     </style>
 </head>
 <body>
-    <canvas id="game-canvas"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-    <script type="module" src="src/main.js"></script>
+    <div id="app"></div>
+    <script type="module" src="src-new/main.js"></script>
 </body>
-</html></content>
-<parameter name="filePath">c:\Users\X1\Documents\MINE SHINE\index.html
+</html>
