feat: Enhance avatar customization and UI improvements
- Updated body sizes and shapes for avatar customization, including new body types (baby, adult) and shape adjustments.
- Added new clothing styles (rainy, sunny, dress) with updated drawing logic for clothes.
- Introduced new eyebrow colors and a method to set eyebrow styles based on hair color.
- Enhanced eye functionality with look offsets and improved drawing logic for pupils.
- Expanded hair styles with new options (waves, long, pixie, bob) and adjusted drawing parameters.
- Modified head shapes to accommodate new body types and added decorative elements.
- Introduced new shoe styles (sandals) and adjusted drawing parameters for shoes.
- Updated app state to include new body sizes and clothing options, along with additional unlocked items.
- Improved UI configuration with new colors and button styles.
- Added reward claiming functionality with a method to unlock random items.
- Enhanced touch feedback with a new pulse effect.
- Updated furniture drawing logic to include decorative elements.
- Expanded scene functionality with new avatar customization events and improved scene transitions.
- Improved bottom navigation with new icons and labels, including a closet option.
- Enhanced card and button UI components with new styles and icon support.
- Added new feedback effects for button interactions.
- Improved panel layout for better card arrangement.
- Enhanced world manager background drawing for a more visually appealing environment.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="icon" href="data:,">
     <title>MineShine - Avatar Life Simulation</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
         body {
             margin: 0;
             padding: 0;
             overflow: hidden;
             background: #f6f2ea;
-            font-family: 'Trebuchet MS', sans-serif;
+            font-family: 'Fredoka', 'Trebuchet MS', sans-serif;
         }
         #app {
             width: 100vw;
